@@ -1,5 +1,8 @@
 2018-12-10  Ben Elliston  <bje@gnu.org>
 
+	* runtest.exp: Remove unnecessary quotes and braces around
+	variable expansions.
+
 	* lib/debugger.exp (dumpvars): Remove unnecessary braces.
 
 2018-12-09  Ben Elliston  <bje@gnu.org>
